# TirusWind

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
TirusWind/: CMakeLists.txt  WaveIO.h  main.cpp
dsp56kJitTest/: CMakeLists.txt  CMakePresets.json  dsp56k_jit_perf.cpp
source/: MidiIO.h  MidiIOHost.h  WaveIO.h  WaveIOI2S.h  main.cpp
